--- a/home.html
+++ b/home.html
@@ -1,1 +1,110 @@
-home
+<!DOCTYPE html>
+<html>
+<title>HOME</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+.w3-row-padding img {margin-bottom: 12px}
+/* Set the width of the sidebar to 120px */
+.w3-sidebar {width: 120px;background: #222;}
+/* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
+#main {margin-left: 120px}
+/* Remove margins from "page content" on small screens */
+@media only screen and (max-width: 600px) {#main {margin-left: 0}}
+</style>
+<body class="w3-black ">
+
+<!-- Icon Bar (Sidebar - hidden on small screens) -->
+<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
+  <!-- Avatar image in top left corner -->
+  <img src="images/avatar_smoke.jpg" style="width:100%">
+  <a href="home.html" class="w3-bar-item w3-button w3-padding-large w3-black">
+    <i class="fa fa-home w3-xxlarge"></i>
+    <p>HOME</p>
+  </a>
+  <a href="account.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fa fa-user w3-xxlarge"></i>
+    <p>PROFILE</p>
+  </a>
+  <a href="discover.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fa fa-bell w3-xxlarge"></i>
+    <p>DISCOVER</p>
+  </a>
+  <a href="updates.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fa fa-envelope w3-xxlarge"></i>
+    <p>UPDATES</p>
+  </a>
+</nav>
+
+<!-- Navbar on small screens (Hidden on medium and large screens) -->
+<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
+  <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
+    <a href="home.html" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
+    <a href="account.html" class="w3-bar-item w3-button" style="width:25% !important">PROFILE</a>
+    <a href="discover.html" class="w3-bar-item w3-button" style="width:25% !important">DISCOVER</a>
+    <a href="updates.html" class="w3-bar-item w3-button" style="width:25% !important">UPDATES</a>
+  </div>
+</div>
+
+<!-- Page Content -->
+<div class="w3-padding-large w3-padding" id="main">
+	<!-- Photo Grid -->
+	<div class="w3-row w3-row-padding w3-padding-32" id="myGrid" style="margin-bottom:128px">
+	  <div class="w3-third">		  
+		<div class="w3-display-container w3-hover-opacity" style="width:100%">
+			<div class="w3-container w3-white w3-center">
+			  <p>The Italian / Austrian Alps</p>			  
+			</div>
+			<img src="images/rocks.jpg" style="width:100%">
+			<div class="w3-display-topright w3-xlarge">
+			<button class="w3-button w3-yellow"><i class="fa fa-caret-right" aria-hidden="true"></i></button></div>
+			<div class="w3-display-middle w3-display-hover w3-xlarge">
+			  <button class="w3-button w3-yellow"><i class="fa fa-play"></i>1</button>
+			</div>			
+		</div>
+		<div class="w3-display-container w3-hover-opacity" style="width:100%">
+			<div class="w3-container w3-white w3-center">
+			  <p>The Italian / Austrian Alps</p>
+			</div>
+			<img src="images/sound.jpg" style="width:100%">
+			<div class="w3-display-middle w3-display-hover w3-xlarge">
+			  <button class="w3-button w3-black">John Doe</button>
+			</div>
+		</div>		
+		<div class="w3-display-container w3-hover-opacity" style="width:100%">
+			<img src="images/rock.jpg" style="width:100%">
+			<div class="w3-display-middle w3-display-hover w3-xlarge">
+			  <button class="w3-button w3-black">John Doe</button>
+			</div>
+		</div>	
+	  </div>
+
+	  <div class="w3-third">
+		<img src="images/coffee.jpg" style="width:100%">
+		<img src="images/bridge.jpg" style="width:100%">
+		<img src="images/notebook.jpg" style="width:100%">
+		<img src="images/london.jpg" style="width:100%">
+		<img src="images/rocks.jpg" style="width:100%">
+	  </div>
+
+	  <div class="w3-third">
+		<img src="images/mist.jpg" style="width:100%">
+		<img src="images/workbench.jpg" style="width:100%">
+		<img src="images/gondol.jpg" style="width:100%">
+		<img src="images/lights.jpg" style="width:100%">
+		<img src="images/workshop.jpg" style="width:100%">
+	  </div>
+	</div>
+
+    <!-- Footer -->
+  <footer class="w3-padding-64 w3-center w3-bottom">
+    <a class="w3-btn w3-circle w3-xlarge w3-red"><i class="fa fa-microphone" aria-hidden="true"></i></a>
+  </footer>
+<!-- END PAGE CONTENT -->
+</div>
+
+</body>
+</html>
